--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -15,6 +15,7 @@
         android:id="@+id/menuCheckExpenses"
         android:background="@mipmap/menu_button_3"
         android:layout_centerVertical="true"
+            android:onClick="pressOnLookMoneyFlow"
         />
 
     <ImageButton
@@ -24,7 +25,8 @@
         android:background="@mipmap/menu_button_2"
         android:layout_alignTop="@+id/menuCheckExpenses"
         android:layout_gravity="right"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:onClick="pressOnAddMoneyFlow"/>
 
     <ImageButton
         android:layout_width="120dp"
@@ -33,5 +35,18 @@
         android:background="@mipmap/menu_button_4"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:onClick="pressOnViewBudgetReview"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/izlogoties"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="#8bc343"
+        android:ems="6"
+        android:theme="@style/AppTheme.Button"
+        android:onClick="pressOnLogOut"/>
 </RelativeLayout>
