login and register with sqlite

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -134,5 +134,6 @@
         android:background="#8bc343"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="pressOnConfirmRegistration"/>
 </RelativeLayout>
