--- a/app/src/main/res/layout/activity_income_add.xml
+++ b/app/src/main/res/layout/activity_income_add.xml
@@ -89,7 +89,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="date"
+        android:inputType="text"
         android:ems="10"
         android:id="@+id/incomeSourceInput"
         android:layout_below="@+id/incomeSourceTextView"
@@ -109,6 +109,7 @@
         android:layout_below="@+id/incomeSourceInput"
         android:layout_marginTop="20dp"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="pressOnIncomeAdd"/>
 
 </RelativeLayout>
