Visualization for income / outcome. + Beggining for DateTimePicker dialog

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -74,7 +74,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/surnameInput"
-        android:layout_alignEnd="@+id/surnameInput" />
+        android:layout_alignEnd="@+id/surnameInput"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -136,4 +136,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="pressOnConfirmRegistration"/>
+
+    <ImageButton
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageButton"
+        android:background="@mipmap/date_picker"
+        android:layout_alignTop="@+id/birthDateTextView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="pressOnDatePicker"/>
 </RelativeLayout>
