--- a/app/src/main/res/layout/activity_budget_review.xml
+++ b/app/src/main/res/layout/activity_budget_review.xml
@@ -12,7 +12,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Money"
-        android:onClick="pressOnMoneyButton"/>
+        android:text="@string/vizualizacija_ienakumi_izdevumi"
+        android:onClick="pressOnMoneyVisualizationButton"/>
 
 </RelativeLayout>
