--- a/app/src/main/res/layout/simple_xy_plot_example.xml
+++ b/app/src/main/res/layout/simple_xy_plot_example.xml
@@ -9,7 +9,7 @@
         android:id="@+id/plot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        ap:label="XY Plot"
+        ap:label="Izdevumu / Ienākumu atspoguļojums"
         ap:rangeLabel="range"
         ap:domainLabel="domain"/>
 
