--- a/app/src/main/res/xml/line_point_formatter_with_labels_2.xml
+++ b/app/src/main/res/xml/line_point_formatter_with_labels_2.xml
@@ -5,4 +5,4 @@
     vertexPaint.strokeWidth="20dp"
     vertexPaint.color="#000099"
     fillPaint.color="#00000000"
-    pointLabelFormatter.textPaint.color="#FFFFFF"/>
+    pointLabelFormatter.textPaint.color="#000000"/>
