Money flow displaying improvements

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,10 @@
         <item name="android:windowNoTitle">true</item><!-- Why this isn`t working? -->
     </style>
 
+    <style name="Divider">
+        <item name="android:layout_width">1dip</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">#00bcd5</item>
+    </style>
+
 </resources>
