--- a/app/src/main/res/layout/activity_view_money_flow.xml
+++ b/app/src/main/res/layout/activity_view_money_flow.xml
@@ -22,6 +22,49 @@
         android:id="@+id/moneyFlowListView"
         android:layout_below="@+id/displayOptionsSpinner"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:visibility="gone" />
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/displayOptionsSpinner"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/layoutXML"
+        android:shrinkColumns="true"
+        android:stretchColumns="true"
+        android:divider="@color/colorOrange"
+        android:showDividers="middle">
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
+        <TextView
+            android:id="@+id/tvName"
+            android:padding="5dp"
+            android:text="@string/nosaukums"
+            android:textSize="16sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+        <TextView
+            android:id="@+id/tvAmount"
+            android:padding="5dp"
+            android:text="@string/apjoms"
+            android:textSize="16sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+        <TextView
+            android:id="@+id/tvDate"
+            android:padding="5dp"
+            android:text="@string/datums"
+            android:textSize="16sp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+        </TableRow>
+    </TableLayout>
 
 </RelativeLayout>
